tests/rosetta/out/Rust/15-puzzle-solver.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:31Z
fn main() {
    mod testpkg {
        pub fn Add(a: i32, b: i32) -> i32 { a + b }
        pub const Pi: f64 = 3.14;
        pub const Answer: i32 = 42;
    }
    println!("{:?}", testpkg::FifteenPuzzleExample());
}
